--- a/index.html
+++ b/index.html
@@ -316,6 +316,11 @@
     <script src="js/main.js"></script>
 	<script type="text/javascript" src="js/slick-init.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
-
+<script type="text/javascript">
+setTimeout(function(){var a=document.createElement("script");
+var b=document.getElementsByTagName("script")[0];
+a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0022/2822.js?"+Math.floor(new Date().getTime()/3600000);
+a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
 </body>
 </html>
